hard-gists/2632394/run.log
=== Docker Run Log for 2632394 ===
Started at: Mi 29. Okt 13:10:55 CET 2025

[2025-10-29 13:10:55] START: Running container for 2632394
[2025-10-29 13:10:56] SUCCESS: Container 4a807aeab75d153a0d0d024742a34f8f1f5d51d4b98f6beb6e9351fabd51c31a started for 2632394
=== Container logs for 2632394 ===
  File "/snippet.py", line 61
    print "downloaded review len(%s)/rating(%s)" % (len(data), rating)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2632394 ===
[2025-10-29 13:10:58] INFO: Container 4a807aeab75d153a0d0d024742a34f8f1f5d51d4b98f6beb6e9351fabd51c31a has stopped
